--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@react-map/indonesia": "^1.0.9",
     "@types/react-syntax-highlighter": "^15.5.13",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
