Fix authService types and Culture page markdown rendering, remove duplicate auth components

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
